# cython-playground

./: CMakeLists.txt  README.md  install.py
cmake/: CMakeLists.txt  ReplicatePythonSourceTree.cmake  UseCython.cmake
playground/: CMakeLists.txt  __init__.py  __main__.py  cpp_playground.pxd  lib.pyx  main.py
src/: CMakeLists.txt  playground.cc  pyhooks.cc  pyhooks.h  pymodule.cpp  pymodule.h  pymodule.pxd  pymodule.pyx  run_playground.cc  run_playground.h
